# python-mini-projects

./: .gitignore  README.md
01_caesar_cipher/: README.md  caeser_cipher.py  test_caesar_cipher.py
02_hangman/: README.md  hangman_art.py  hangman_words.py  main.py  test_main.py
03_coffee_machine/: main.py  resources.py
04_quiz_project_oop/: data.py  main.py  question_model.py  quiz_brain.py
05_github_user_activity/: README.md  main.py
06_github_trending/: README.md  main.py  pyproject.toml  requirements.txt
06_github_trending/github_trending/: api.py  cli.py  utils.py
07_tmdb_cli/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
07_tmdb_cli/tmdb_cli/: api.py  cli.py  test_api.py  utils.py
08_number_guessing_game/: main.py
09_contacts_manager/: cli.py  models.py  service.py  storage.py  utils.py
11_dice_game_oop/: die.py  player.py
12_tic_tac_toe_oop/: board.py  move.py  player.py  tictactoe.py
13_contact_book_csv/: main.py
14_movie_tracker/: main.py
15_count_down_timer/: main.py
16_password_strength_checker/: main.py
17_scrape_wikki_headings/: main.py
18_web_scraping_hacker_news_to_csv/: README.md  main.py
19_web_scraping_multipage_to_json/: README.md  main.py
20_web_scraping_image_download/: README.md  main.py
21_crypto_price_tracker/: README.md  constants.py  crypto.py  graph.py  job.py  main.py
22_generate_image_with_quotes/: main.py
23_crypto_price_tracker_sqlite_db/: README.md  constants.py  crypto.py  main.py
24_read_pdf/: main.py
25_file_organiser/: main.py
26_photos_organizer/: main.py
(+21 files in other folders)
